refactor (evaluator) : Remplacer mainValue/kicker par une List<Integer> pour une comparaison complète