@@ -8,121 +8,56 @@ import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-@DisplayName("Tests pour la règle des deux paires")
+@DisplayName("Tests pour la règle des deux paires (getDoublePairValues)")
 class TwoPairsRuleTest {
 
     @Test
-    @DisplayName("Une main avec deux paires devrait être validée")
+    @DisplayName("Devrait retourner une liste [PaireHaute, PaireBasse]")
     void shouldDetectTwoPairs() {
         List<Card> hand = Arrays.asList(
-            new Card(10),
-            new Card(10),
-            new Card(7),
-            new Card(7),
-            new Card(2)
+                new Card(10), new Card(10), new Card(7), new Card(7), new Card(2)
         );
-        assertTrue(TwoPairsRule.hasTwoPairs(hand));
+        List<Integer> result = TwoPairsRule.getDoublePairValues(hand);
+        assertEquals(List.of(10, 7), result);
     }
 
     @Test
-    @DisplayName("Une main avec une seule paire ne devrait pas être validée")
-    void shouldNotDetectSinglePair() {
+    @DisplayName("Devrait retourner une liste vide pour une seule paire")
+    void shouldReturnEmptyListForSinglePair() {
         List<Card> hand = Arrays.asList(
-            new Card(10),
-            new Card(10),
-            new Card(7),
-            new Card(5),
-            new Card(2)
+                new Card(10), new Card(10), new Card(7), new Card(5), new Card(2)
         );
-        assertFalse(TwoPairsRule.hasTwoPairs(hand));
+        List<Integer> result = TwoPairsRule.getDoublePairValues(hand);
+        assertTrue(result.isEmpty());
     }
 
     @Test
-    @DisplayName("Une main avec trois paires ne devrait pas être validée")
-    void shouldDetectThreePairs() {
+    @DisplayName("Devrait retourner une liste vide pour un brelan")
+    void shouldReturnEmptyListForThreeOfAKind() {
         List<Card> hand = Arrays.asList(
-            new Card(10),
-            new Card(10),
-            new Card(7),
-            new Card(7),
-            new Card(2),
-            new Card(2)
+                new Card(10), new Card(10), new Card(10), new Card(7), new Card(2)
         );
-        assertFalse(TwoPairsRule.hasTwoPairs(hand));
+        List<Integer> result = TwoPairsRule.getDoublePairValues(hand);
+        assertTrue(result.isEmpty());
     }
 
     @Test
-    @DisplayName("Une main avec un brelan ne devrait pas être validée comme deux paires")
-    void shouldNotDetectThreeOfAKindAsTwoPairs() {
+    @DisplayName("Devrait gérer les As et Rois")
+    void shouldHandleAceKingPairs() {
         List<Card> hand = Arrays.asList(
-            new Card(10),
-            new Card(10),
-            new Card(10),
-            new Card(7),
-            new Card(2)
+                new Card(14), new Card(14), new Card(13), new Card(13), new Card(2)
         );
-        assertFalse(TwoPairsRule.hasTwoPairs(hand));
+        List<Integer> result = TwoPairsRule.getDoublePairValues(hand);
+        assertEquals(List.of(14, 13), result);
     }
 
     @Test
-    @DisplayName("Devrait retourner les bonnes valeurs des deux paires")
-    void shouldReturnCorrectPairValues() {
+    @DisplayName("Devrait retourner les paires dans le bon ordre (haute > basse)")
+    void shouldReturnPairsInOrder() {
         List<Card> hand = Arrays.asList(
-            new Card(10),
-            new Card(10),
-            new Card(7),
-            new Card(7),
-            new Card(2)
+                new Card(5), new Card(5), new Card(13), new Card(13), new Card(2)
         );
-        int[] pairValues = TwoPairsRule.getDoublePairValues(hand);
-        assertEquals(10, pairValues[0]);
-        assertEquals(7, pairValues[1]);
-    }
-
-    @Test
-    @DisplayName("Devrait retourner [0,0] quand il n'y a pas deux paires")
-    void shouldReturnZeroArrayWhenNoTwoPairs() {
-        List<Card> hand = Arrays.asList(
-            new Card(10),
-            new Card(10),
-            new Card(7),
-            new Card(5),
-            new Card(2)
-        );
-        int[] pairValues = TwoPairsRule.getDoublePairValues(hand);
-        assertArrayEquals(new int[]{0, 0}, pairValues);
-    }
-
-    @Test
-    @DisplayName("Devrait gérer correctement deux paires avec As")
-    void shouldHandleAcePairs() {
-        List<Card> hand = Arrays.asList(
-            new Card(14),
-            new Card(14),
-            new Card(13),
-            new Card(13),
-            new Card(2)
-        );
-        assertTrue(TwoPairsRule.hasTwoPairs(hand));
-        int[] pairValues = TwoPairsRule.getDoublePairValues(hand);
-        assertEquals(14, pairValues[0]);
-        assertEquals(13, pairValues[1]);
-    }
-
-    @Test
-    @DisplayName("Devrait gérer une main de plus de 5 cartes avec deux paires")
-    void shouldHandleLargerHand() {
-        List<Card> hand = Arrays.asList(
-            new Card(10),
-            new Card(10),
-            new Card(7),
-            new Card(7),
-            new Card(2),
-            new Card(3)
-        );
-        assertTrue(TwoPairsRule.hasTwoPairs(hand));
-        int[] pairValues = TwoPairsRule.getDoublePairValues(hand);
-        assertEquals(10, pairValues[0]);
-        assertEquals(7, pairValues[1]);
+        List<Integer> result = TwoPairsRule.getDoublePairValues(hand);
+        assertEquals(List.of(13, 5), result);
     }
 }
